--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,10 @@
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
     },
-    "autoload-dev": {
+    "autoload": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Model\\": "app/Model/"
         }
     },
     "config": {
