--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "slim/twig-view": "2.4.0",
         "twig/twig": "v1.35.3",
         "twig/extensions": "v1.5.1",
-        "doctrine/dbal": "v2.8.0"
+        "doctrine/dbal": "v2.8.0",
+        "bryanjhv/slim-session": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
