--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .idea/deployment.xml
 .idea/fw.iml
 .idea/misc.xml
@@ -6,3 +5,4 @@
 .idea/php.xml
 .idea/vcs.xml
 .idea/workspace.xml
+.remote-sync.json
